--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.7.1",
     "ng-autocomplete": "^1.0.0",
     "ng2-pdf-viewer": "^10.2.2",
+    "ngx-extended-pdf-viewer": "^21.0.0-alpha.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.0",
     "tslib": "^2.3.0",
